Fixed overflow issue for long file names in the overview panel.

--- a/web/css/tempic-front.css
+++ b/web/css/tempic-front.css
@@ -72,6 +72,12 @@ form {
 	margin: 0 auto 10px;
 }
 
+.panel-body p {
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+}
+
 .std-hide {
   display: none;
 }
